@@ -1,3 +1,10 @@
+2008-12-19  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* MonoDevelop.Ide.Gui/IPadContainer.cs:
+	* MonoDevelop.Ide.Gui/IWorkbenchLayout.cs:
+	* MonoDevelop.Ide.Gui/SdiWorkspaceLayout.cs: Added ContentVisible
+	property to Pad. Works like the one in DockItem.
+
 2008-12-12  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* MonoDevelop.Ide.Gui/Document.cs: Type the ActiveView property, and
